updated the file structure and connected server

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,5 +1,5 @@
 .loginPage {
-    background-image: url('D:\Git Hub Projects\React_Banking_Web\banking_webapp\assets\laptop_phone_clock_178806_300x168.jpg');
+    background-image: url('D:\Git Hub Projects\React_Banking_Web\banking_webapp\src\assets\laptop_phone_clock_178806_300x168.jpg');
     background-size: 100%; /* Optional: Scale the image to cover the entire background */
     background-repeat: no-repeat; /* Optional: Prevent image from repeating */
     background-position: top;
