--- a/client/src/components/Users.css
+++ b/client/src/components/Users.css
@@ -9,6 +9,10 @@
     padding: 0px;
 }
 
+.d-flex.justify-content-center.align-items-center.vh-100.users {
+    /* Add right margin */
+    margin-left: 200px; /* Adjust the value as needed */
+}
 .p-4.rounded.w-90 {
     background-color: #dfe1d6;
     opacity: 0.92;
